# AIToolbox

./: .dockerignore  .env.example  .gitignore  Projet_2_Orchestration.md  README.md  docker-compose.prod.yml  docker-compose.yml  orchestration.txt
.github/workflows/: cd.yml  ci.yml  security.yml
app_api/: .gitignore  Dockerfile  main.py  pyproject.toml
app_api/maths/: mon_module.py
app_api/modules/: connect.py  crud.py  models.py
app_api/tests/: test_api.py  test_maths.py
app_front/: .gitignore  Dockerfile  main.py  pyproject.toml
app_front/pages/: 1_Ajouter_Donnees.py  2_Voir_Donnees.py
