[project]
name = "app-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
]
[tool.setuptools.packages.find]
include = ["data*", "maths*", "models*", "modules*", "tests*"]  # Liste tous tes packages

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff",
    #"pytest>=9.0.2",
]
